@@ -82,6 +82,11 @@ class ContentModelArticle extends JModelAdmin
 
 		// Increment the content version number.
 		$table->version++;
+		
+		// Reorder the articles within the category so the new article is first
+		if (empty($table->id)) {
+			$table->reorder('catid = '.(int) $table->catid.' AND state >= 0');
+		}
 	}
 
 	/**
