@@ -216,6 +216,11 @@ class ContentModelForm extends JModelForm
 		// Increment the content version number
 		$table->version++;
 
+		// Reorder the articles within the category so the new article is first
+		if (empty($table->id)) {
+			$table->reorder('catid = '.(int) $table->catid.' AND state >= 0');
+		}
+		
 		// Include the content plugins for the onSave events.
 		JPluginHelper::importPlugin('content');
 
